--- a/songs.html
+++ b/songs.html
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.1/10</h2>
+            <h2 id="rating">Overall Rating 7.9/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/7Bq17tNAUCLceZQOJMnj3D?si=15c9f4bd51b54c57"
+                    href="https://open.spotify.com/track/4tBl1xhBg5PETpBvFnQmGl?si=81c2b2529b2d44a1"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=QFfwRYf3YzE"
+                    href="https://www.youtube.com/watch?v=dseLaYjKGzk"
                     target="_blank"
                     ><center>
                       <img
@@ -141,23 +141,21 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The starting progression of this song from a simple drum into an
-              overabundance of all kinds of percussion is my favorite! I love
-              the way this song feels and sounds throughout, it never gets tired
-              or repetitive (from my limited experience, some samba tracks fall
-              victim to falling flat in the middle).
+              The "ooh, ooh, ooh" vocalizations at the begining of this song
+              mixed with the harsh electric guitar chords really drew me in to
+              this track. The same vocalizations peek out in between verses and
+              also conclude the song in a great way. I also really enjoy the
+              album cover :)
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              In my recent conquest to expand the amount of music genres I
-              listen to, I fell in love with the relaxed, Samba sub-genre of
-              Bossa nova. Cartola is famous for his pioneering of Samba, and
-              while this song teteers the line of Samba and Bossa nova, I'm not
-              here to split hairs on something so trivial. This song in
-              particular stands out to me because of its overall progression and
-              sonical storytelling (although I am currently in the dark as far
-              as lyrics go). So give this one a listen, I think it's an easy
-              listen for almost anyone, and make it a great week!
+              This week I dove blindly into classical punk music, a genre that
+              I've never ever touched before. "Cut Your Hair" was the first song
+              I heard from Pavement but it instantly stuck with me and continued
+              to listen to the entire album of its origin. They have more of a
+              rock-oriented sound than other punk artists of the time but I
+              ultimately find Pavement's music more listenable. Give this one a
+              listen and make it a great day!
             </p>
           </div>
         </div>
@@ -191,18 +189,18 @@
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Ayesha Malick: Luxurious - Gwen Stefani
+            Zoe Campion: Freak - feeble little horse
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating 8.4/10</h2>
+              <h2 id="rating">Overall Rating 8.0/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/3UQmoVQJqBYauTZLVPs3uo?si=f633ced1e42f4852"
+                    href="https://open.spotify.com/track/3YhPmmnigtDxukWdqlQXrF?si=11340ee44240480e"
                     target="_blank"
                     ><center>
                       <img
@@ -216,7 +214,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=vIhlZKxi8AU"
+                    href="https://www.youtube.com/watch?v=Ykl9YJbJFts"
                     target="_blank"
                     ><center>
                       <img
@@ -233,13 +231,16 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            I was never a big Gwen Stefani girl but for some reason when I
-            rediscovered this song a few days ago, I have NOT been able to stop
-            listening to it. Something about it is so catchy, so classically
-            y2k—I love it. I also love the parallels she draws between
-            materialistic opulence and the idea of being “rich” in love. It
-            reminds me of the grandiose that characterized the Roaring Twenties,
-            one of my favorite eras in history!
+            A friend recently introduced me to feeble little horses and I've
+            become obsessed with their album Girl with Fish. The other stand out
+            is Steamroller, but Freak delivers the best moment on the album with
+            the "six foot five" key change. The song is short and punchy, and
+            the sports analogies add a sassy bite to the lyrics. As the top
+            track on the album I think it sets the tone well for what the rest
+            of the songs deliver. I've been going down the 90s girl rock band
+            rabbit hole, and this album is a great modern rendition of the
+            genre. Bonus points that "freak" is one of my top descriptors as of
+            late!
           </p>
         </div>
         <div class="divider"><center>Songs of the Week Spotify</center></div>
@@ -567,6 +568,11 @@
               <td>61</td>
               <td>Agora Hills - Doja Cat</td>
               <td>8.1/10</td>
+            </tr>
+            <tr>
+              <td>62</td>
+              <td>Alvorada - Cartola</td>
+              <td>8.3/10</td>
             </tr>
           </table>
         </div>
