--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 63: Cut Your Hair - Pavement
+          Week 64: A Fond Farewell - Elliot Smith
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 7.9/10</h2>
+            <h2 id="rating">Overall Rating 9.9/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/4tBl1xhBg5PETpBvFnQmGl?si=81c2b2529b2d44a1"
+                    href="https://open.spotify.com/track/60763oPe4Ngyu1Q3jFZWHi?si=f6b07b23fdc64494"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=dseLaYjKGzk"
+                    href="https://www.youtube.com/watch?v=N5ZuNUxekr4"
                     target="_blank"
                     ><center>
                       <img
@@ -141,21 +141,28 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The "ooh, ooh, ooh" vocalizations at the begining of this song
-              mixed with the harsh electric guitar chords really drew me in to
-              this track. The same vocalizations peek out in between verses and
-              also conclude the song in a great way. I also really enjoy the
-              album cover :)
+              As this is my highest standing rating yet, it's safe to say that I
+              love all parts of this song equally. What puts it above all the
+              others is the beautiful lyricism that, in my opinion, rises above
+              Elliot Smith's tendencies of complete and utter self-depreciation.
+              "A Fond Farewell" has a perfect mix of morbid self-reflection and
+              optimism for the future.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              This week I dove blindly into classical punk music, a genre that
-              I've never ever touched before. "Cut Your Hair" was the first song
-              I heard from Pavement but it instantly stuck with me and continued
-              to listen to the entire album of its origin. They have more of a
-              rock-oriented sound than other punk artists of the time but I
-              ultimately find Pavement's music more listenable. Give this one a
-              listen and make it a great day!
+              I rediscovered my undying love for this song this week after my
+              friend Kinzey suggested I play some Elliot Smith on the radio, as
+              he is her current hyperfixation. I have a hard time listening to
+              extended bouts of Elliot Smith. One album can change my mood
+              entirely, his songs are just a tad too depressing for my undying
+              buoyancy. This song talks of his struggle with drug addiction and
+              self-image, it's truly horrid stuff. The chorus, however, acts as
+              a repeated grounding in optimism. "This is not my life, it's just
+              a fond farewell to a friend". These macabre images are not him
+              anymore, it's a refelction and a dismissal of his old self and a
+              relization of the negativity he was trapped in. Give this one a
+              few listens, it will grow on you I hope, or maybe you will
+              self-reflect yourself. Either way, make it a great week!
             </p>
           </div>
         </div>
@@ -189,18 +196,18 @@
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Zoe Campion: Freak - feeble little horse
+            Omar Mejia: Sanctuary - Joji
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating 8.0/10</h2>
+              <h2 id="rating">Overall Rating 9.2/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/3YhPmmnigtDxukWdqlQXrF?si=11340ee44240480e"
+                    href="https://open.spotify.com/track/5F1ZmucV0uJY14y2dYKePa?si=47098b49e8be4025"
                     target="_blank"
                     ><center>
                       <img
@@ -214,7 +221,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=Ykl9YJbJFts"
+                    href="https://www.youtube.com/watch?v=5-uWlFq380M"
                     target="_blank"
                     ><center>
                       <img
@@ -231,16 +238,13 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            A friend recently introduced me to feeble little horses and I've
-            become obsessed with their album Girl with Fish. The other stand out
-            is Steamroller, but Freak delivers the best moment on the album with
-            the "six foot five" key change. The song is short and punchy, and
-            the sports analogies add a sassy bite to the lyrics. As the top
-            track on the album I think it sets the tone well for what the rest
-            of the songs deliver. I've been going down the 90s girl rock band
-            rabbit hole, and this album is a great modern rendition of the
-            genre. Bonus points that "freak" is one of my top descriptors as of
-            late!
+            I recently saw Joji live in person. It was definitely one of the
+            better concerts I have ever attended. He opened up his set with with
+            this particular song. I’ve always loved this song, but just hearing
+            him perform this, made it so many times better. It’s a lovely ballad
+            to sing your heart out and an extraordinary way to forget your
+            problems for a moment. The entirety of the Nectar album is also just
+            *chef’s kiss*
           </p>
         </div>
         <div class="divider"><center>Songs of the Week Spotify</center></div>
@@ -573,6 +577,11 @@
               <td>62</td>
               <td>Alvorada - Cartola</td>
               <td>8.3/10</td>
+            </tr>
+            <tr>
+              <td>63</td>
+              <td>Cut Your Hair - Pavement</td>
+              <td>7.9/10</td>
             </tr>
           </table>
         </div>
