--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 64: A Fond Farewell - Elliot Smith
+          Week 65: Be Cool - Maggie Rogers
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.9/10</h2>
+            <h2 id="rating">Overall Rating 9.2/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/60763oPe4Ngyu1Q3jFZWHi?si=f6b07b23fdc64494"
+                    href="https://open.spotify.com/track/13WcpETaTUAFDyhVvvXdDa?si=aa2f86128dee4209"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=N5ZuNUxekr4"
+                    href="https://www.youtube.com/watch?v=NjABAVsZ_mU"
                     target="_blank"
                     ><center>
                       <img
@@ -141,28 +141,19 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              As this is my highest standing rating yet, it's safe to say that I
-              love all parts of this song equally. What puts it above all the
-              others is the beautiful lyricism that, in my opinion, rises above
-              Elliot Smith's tendencies of complete and utter self-depreciation.
-              "A Fond Farewell" has a perfect mix of morbid self-reflection and
-              optimism for the future.
+              The soulfulness of Maggie Rogers's voice on this new album have me
+              truly enamored and are extraordinarily showcased on this track.
+              The production is soft, but slightly psychedelic and let the
+              vocals really shine here.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              I rediscovered my undying love for this song this week after my
-              friend Kinzey suggested I play some Elliot Smith on the radio, as
-              he is her current hyperfixation. I have a hard time listening to
-              extended bouts of Elliot Smith. One album can change my mood
-              entirely, his songs are just a tad too depressing for my undying
-              buoyancy. This song talks of his struggle with drug addiction and
-              self-image, it's truly horrid stuff. The chorus, however, acts as
-              a repeated grounding in optimism. "This is not my life, it's just
-              a fond farewell to a friend". These macabre images are not him
-              anymore, it's a refelction and a dismissal of his old self and a
-              relization of the negativity he was trapped in. Give this one a
-              few listens, it will grow on you I hope, or maybe you will
-              self-reflect yourself. Either way, make it a great week!
+              This album was just released last year, and I'm so sorry to admit
+              that I'm JUST discovering this album. I love this new sound from
+              her, though. I am always a fan of when artists take their music in
+              a Folk direction. If you like this one, I HIGHLY encourage you to
+              listen to the entirety of "Surrender". As always, make it a great
+              week!
             </p>
           </div>
         </div>
@@ -582,6 +573,11 @@
               <td>63</td>
               <td>Cut Your Hair - Pavement</td>
               <td>7.9/10</td>
+            </tr>
+            <tr>
+              <td>64</td>
+              <td>A Fond Farewell - Elliot Smith</td>
+              <td>9.9/10</td>
             </tr>
           </table>
         </div>
