--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 65: Be Cool - Maggie Rogers
+          Week 66: The Wind - PJ Harvey
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.2/10</h2>
+            <h2 id="rating">Overall Rating 8.3/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/13WcpETaTUAFDyhVvvXdDa?si=aa2f86128dee4209"
+                    href="https://open.spotify.com/track/3CHfuMoubpCT39PBTvAWk9?si=ce3b86018f0b49e7"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=NjABAVsZ_mU"
+                    href="https://www.youtube.com/watch?v=II_WbI6FoXA"
                     target="_blank"
                     ><center>
                       <img
@@ -141,19 +141,25 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The soulfulness of Maggie Rogers's voice on this new album have me
-              truly enamored and are extraordinarily showcased on this track.
-              The production is soft, but slightly psychedelic and let the
-              vocals really shine here.
+              The whispery vocals which start prominently and sink into the
+              background, preluding and then following the actual vocals, is
+              something I've rarely heard in a song. I think this could be
+              gimmicky and lame, but the way PJ Harvey does it is tasteful and
+              dynamic, it adds an interesting layer to the track.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              This album was just released last year, and I'm so sorry to admit
-              that I'm JUST discovering this album. I love this new sound from
-              her, though. I am always a fan of when artists take their music in
-              a Folk direction. If you like this one, I HIGHLY encourage you to
-              listen to the entirety of "Surrender". As always, make it a great
-              week!
+              I listened to two PJ Harvey albums this week. "Is This Desire" is
+              the release that this track hails from. I found it to be worse
+              than the other album I listened to, "Stories From The City,
+              Stories From The Sea", released in 2000. This album had a cohesion
+              that her past release did not, and most of the songs were quality,
+              stand-alone songs. "The Wind" is still my favorite of all of her
+              work, because of its interesting, yet simple derivation from
+              classical art rock. Some of her songs are lost on me, they're just
+              a little too out there for me to enjoy. This track is a great
+              intro into her weirder stuff, though. If you like it, definitely
+              check out more! That's all, make it a great week.
             </p>
           </div>
         </div>
@@ -578,6 +584,11 @@
               <td>64</td>
               <td>A Fond Farewell - Elliot Smith</td>
               <td>9.9/10</td>
+            </tr>
+            <tr>
+              <td>65</td>
+              <td>Be Cool - Maggie Rogers</td>
+              <td>9.2/10</td>
             </tr>
           </table>
         </div>
