--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 66: The Wind - PJ Harvey
+          Week 67: Balaclava - Rafaella
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.3/10</h2>
+            <h2 id="rating">Overall Rating 8.7/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/3CHfuMoubpCT39PBTvAWk9?si=ce3b86018f0b49e7"
+                    href="https://open.spotify.com/track/4o8jdGo5IJgtEiOMFI5HDl?si=942e961c09404487"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=II_WbI6FoXA"
+                    href="https://www.youtube.com/watch?v=klj9nAMynZI"
                     target="_blank"
                     ><center>
                       <img
@@ -141,25 +141,20 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The whispery vocals which start prominently and sink into the
-              background, preluding and then following the actual vocals, is
-              something I've rarely heard in a song. I think this could be
-              gimmicky and lame, but the way PJ Harvey does it is tasteful and
-              dynamic, it adds an interesting layer to the track.
+              The chorus has been stuck in my head ever since my first few
+              listens earlier this week. I'm a big fan of balaclavas as well.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              I listened to two PJ Harvey albums this week. "Is This Desire" is
-              the release that this track hails from. I found it to be worse
-              than the other album I listened to, "Stories From The City,
-              Stories From The Sea", released in 2000. This album had a cohesion
-              that her past release did not, and most of the songs were quality,
-              stand-alone songs. "The Wind" is still my favorite of all of her
-              work, because of its interesting, yet simple derivation from
-              classical art rock. Some of her songs are lost on me, they're just
-              a little too out there for me to enjoy. This track is a great
-              intro into her weirder stuff, though. If you like it, definitely
-              check out more! That's all, make it a great week.
+              I think it was this past Tuesday that I just decided I would
+              familiarize myself with the entire, limited discography of
+              Rafaella. I was very familiar already with her 2022 EP, but beyond
+              that I was in the dark. She only has one other EP, "Ballerina"
+              from 2019 of which this song hails. "Balaclava" is my favorite
+              from this EP, very upbeat and pop-central with a pleasing bridge
+              that almost delves into a sort of electronic dance music realm.
+              It's an easy listen, so don't be shy, give it a stream or two.
+              Make it a great week!
             </p>
           </div>
         </div>
@@ -589,6 +584,11 @@
               <td>65</td>
               <td>Be Cool - Maggie Rogers</td>
               <td>9.2/10</td>
+            </tr>
+            <tr>
+              <td>66</td>
+              <td>The Wind - PJ Harver</td>
+              <td>8.3/10</td>
             </tr>
           </table>
         </div>
