--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 67: Balaclava - Rafaella
+          Week 68: My Little Corner of the World
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.7/10</h2>
+            <h2 id="rating">Overall Rating 9.1/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/4o8jdGo5IJgtEiOMFI5HDl?si=942e961c09404487"
+                    href="https://open.spotify.com/track/2bY66Hf5NbHJ8Ai8eNmJHG?si=2dc506536a744252"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=klj9nAMynZI"
+                    href="https://www.youtube.com/watch?v=UgvAFptWdgs"
                     target="_blank"
                     ><center>
                       <img
@@ -141,20 +141,23 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The chorus has been stuck in my head ever since my first few
-              listens earlier this week. I'm a big fan of balaclavas as well.
+              Georgia Hubley, the vocalist in this song and one of two main
+              vocalists in Yo La Tengo, does a beautiful rendition of this
+              classic, airy, and innocent love song. The shoegaze-ification of
+              the production is also worth noting, it really sets this version
+              apart from the many, many others.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              I think it was this past Tuesday that I just decided I would
-              familiarize myself with the entire, limited discography of
-              Rafaella. I was very familiar already with her 2022 EP, but beyond
-              that I was in the dark. She only has one other EP, "Ballerina"
-              from 2019 of which this song hails. "Balaclava" is my favorite
-              from this EP, very upbeat and pop-central with a pleasing bridge
-              that almost delves into a sort of electronic dance music realm.
-              It's an easy listen, so don't be shy, give it a stream or two.
-              Make it a great week!
+              I listened to a lot of Yo La Tengo this week, but this album "I
+              Can Hear The Heart Beating As One" was their strongest by far in
+              my opinion. This song, while not my favorite from the album, has
+              stuck with me ever since my initial binge-listen on Monday. It's
+              light, and innocent, and assisted in hitting fast-forward on my
+              final week before Thanksgiving Break. If you want more Yo La
+              Tengo, "Little Honda" and "One PM Again" from this album are
+              perfect windows into the kind of music that this band usually
+              makes. As always, make it a great week!
             </p>
           </div>
         </div>
@@ -589,6 +592,11 @@
               <td>66</td>
               <td>The Wind - PJ Harver</td>
               <td>8.3/10</td>
+            </tr>
+            <tr>
+              <td>67</td>
+              <td>Balaclava</td>
+              <td>8.7/10</td>
             </tr>
           </table>
         </div>
