--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 68: My Little Corner of the World
+          Week 69: Tired - Adele
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.1/10</h2>
+            <h2 id="rating">Overall Rating 9.7/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/2bY66Hf5NbHJ8Ai8eNmJHG?si=2dc506536a744252"
+                    href="https://open.spotify.com/track/6ONMnNDySnCsJPBcXWNU05?si=919c2d5764134bbf"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=UgvAFptWdgs"
+                    href="https://www.youtube.com/watch?v=jt8SFRxKNk0"
                     target="_blank"
                     ><center>
                       <img
@@ -141,23 +141,24 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              Georgia Hubley, the vocalist in this song and one of two main
-              vocalists in Yo La Tengo, does a beautiful rendition of this
-              classic, airy, and innocent love song. The shoegaze-ification of
-              the production is also worth noting, it really sets this version
-              apart from the many, many others.
+              The chorus of this song is so addictive. The perfect pitch of
+              Adele's voice matched with the technotic background synths truly
+              put me into a trance. The amazingly climactic bridge in the middle
+              of this song also forms it into something really amazing.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              I listened to a lot of Yo La Tengo this week, but this album "I
-              Can Hear The Heart Beating As One" was their strongest by far in
-              my opinion. This song, while not my favorite from the album, has
-              stuck with me ever since my initial binge-listen on Monday. It's
-              light, and innocent, and assisted in hitting fast-forward on my
-              final week before Thanksgiving Break. If you want more Yo La
-              Tengo, "Little Honda" and "One PM Again" from this album are
-              perfect windows into the kind of music that this band usually
-              makes. As always, make it a great week!
+              I played something from Adele's sophomore album "21" on the radio
+              earlier this week. It's the go-to for many people and undoubtedly
+              the most successful out of her 4 records (relatively). But I have
+              always had a feeling that her freshman album "19" was my overall
+              favorite despite my listening history that would tell you
+              otherwise. Giving a full listen-through on Monday, I forgot JUST
+              how good this album is. It's a beautiful neo-soul recital immersed
+              in her soon-to-be-timeless pop sound. Every track in this thing is
+              a masterpiece, but this one is the one that's really had a hold of
+              me this week. You'll love this one, I'm telling you. Enjoy and
+              make it a great week!
             </p>
           </div>
         </div>
@@ -595,8 +596,13 @@
             </tr>
             <tr>
               <td>67</td>
-              <td>Balaclava</td>
+              <td>Balaclava - Rafaella</td>
               <td>8.7/10</td>
+            </tr>
+            <tr>
+              <td>68</td>
+              <td>My Little Corner of the World - Yo La Tengo</td>
+              <td>9.1/10</td>
             </tr>
           </table>
         </div>
