--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 69: Tired - Adele
+          Week 70: MY HOUSE - Beyonce
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.7/10</h2>
+            <h2 id="rating">Overall Rating 9.2/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/6ONMnNDySnCsJPBcXWNU05?si=919c2d5764134bbf"
+                    href="https://open.spotify.com/track/7omJfT9s6V2IpQNBYyq5C8?si=03ae8616e39c44c4"
                     target="_blank"
                     ><center>
                       <img
@@ -141,24 +141,24 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              The chorus of this song is so addictive. The perfect pitch of
-              Adele's voice matched with the technotic background synths truly
-              put me into a trance. The amazingly climactic bridge in the middle
-              of this song also forms it into something really amazing.
+              What's not to love here? I have to give it to the sample on this
+              one though if I have to choose my favorite part. This song is
+              driven by this powerful sample, I love it when a step team or
+              cheerleading routine is sampled in a song. Beyonce's live album
+              "Homecoming" has a lot of this school-spirit-driven production as
+              well, she's no rookie at producing these kinds of songs.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              I played something from Adele's sophomore album "21" on the radio
-              earlier this week. It's the go-to for many people and undoubtedly
-              the most successful out of her 4 records (relatively). But I have
-              always had a feeling that her freshman album "19" was my overall
-              favorite despite my listening history that would tell you
-              otherwise. Giving a full listen-through on Monday, I forgot JUST
-              how good this album is. It's a beautiful neo-soul recital immersed
-              in her soon-to-be-timeless pop sound. Every track in this thing is
-              a masterpiece, but this one is the one that's really had a hold of
-              me this week. You'll love this one, I'm telling you. Enjoy and
-              make it a great week!
+              Beyonce!!??!! Beyonce dropped this single out of nowhere on
+              Thursday and I'm still recovering from that shockwave. Although I
+              loved Beyonce's diversion from her iconic sound with her latest
+              record "RENAISSANCE", we are SO back with this new single. It
+              holds on to the greatest disco/house aspects of her "RENAISSANCE"
+              sound, while being reminiscent of "Homecoming" with the dominant
+              step team sample that flows so beautifully with Beyonce's vocals.
+              Enjoy this one, it's a real treat. Oh and also. . . Make it a
+              great week!!
             </p>
           </div>
         </div>
@@ -192,18 +192,18 @@
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Omar Mejia: Sanctuary - Joji
+            Drew Gibson: Planet Claire - The B-52's
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating 9.2/10</h2>
+              <h2 id="rating">Overall Rating 8.4/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/5F1ZmucV0uJY14y2dYKePa?si=47098b49e8be4025"
+                    href="https://open.spotify.com/track/5aC0QmgjYGG8QYgAg06nTk?si=b8530b788fd04313"
                     target="_blank"
                     ><center>
                       <img
@@ -217,7 +217,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=5-uWlFq380M"
+                    href="https://www.youtube.com/watch?v=uaXtqSmUlxA"
                     target="_blank"
                     ><center>
                       <img
@@ -234,13 +234,15 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            I recently saw Joji live in person. It was definitely one of the
-            better concerts I have ever attended. He opened up his set with with
-            this particular song. I’ve always loved this song, but just hearing
-            him perform this, made it so many times better. It’s a lovely ballad
-            to sing your heart out and an extraordinary way to forget your
-            problems for a moment. The entirety of the Nectar album is also just
-            *chef’s kiss*
+            This is the first song on the first album of the B-52’s and I feel
+            like it’s a really fun introduction to a lot of their music. It
+            isn’t as famous as Love Shack or Rock Lobster, but the beat is
+            really fun and the lyrics are so stupid that you can’t help but
+            smile when it is played. Planet Claire is the perfect song when you
+            just need something silly and uplifting to get you through your day.
+            It also really shows off how a lot of The B-52’s music is just
+            stupid silly lyrics put over really good rock and synth beats that
+            make you want to dance.
           </p>
         </div>
         <div class="divider"><center>Songs of the Week Spotify</center></div>
@@ -603,6 +605,11 @@
               <td>68</td>
               <td>My Little Corner of the World - Yo La Tengo</td>
               <td>9.1/10</td>
+            </tr>
+            <tr>
+              <td>69</td>
+              <td>Tired - Adele</td>
+              <td>9.7/10</td>
             </tr>
           </table>
         </div>
